# black-screen-app

./: .gitignore  CMakeLists.txt  README.md
src/app/: ColorHandler.cpp  ColorHandler.hpp  WindowInitiator.cpp  WindowInitiator.hpp  main.cpp
